--- a/app/views/welcome_pages/index.html.erb
+++ b/app/views/welcome_pages/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Welcome!</h1>
 <% if user_signed_in? %>
-	<img src="<% current_user.image %>"/>
+	<img src="<%= current_user.image %>"/>
+<% else %>
+	WOw	
 <% end %>
