--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,8 +26,9 @@
 	            	<li><%= link_to "New Room", new_room_path %></li>
 	            	<li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 	            <% else %>
-	            	<li><%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
-	            	</li>
+	            	<li><%= link_to "Sign In With Twitter", user_omniauth_authorize_path(:twitter) %></li>
+	            	<li><%= link_to "Sign Up", new_user_registration_path %></li>
+	            	<li><%= link_to "Sign In", new_user_session_path %></li>
 	            <% end %>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
